# soite-feedback

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt  vercel.json
.github/workflows/: ci.yml  deploy-vercel.yml  keep-alive.yml
api/: index.py
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_sv_and_face4.py
backend/app/: cli.py  config.py  database.py  main.py
backend/app/middleware/: logging.py  security_headers.py
backend/app/models/: __init__.py  feedback.py  question.py  user.py
backend/app/routers/: admin.py  auth.py  dashboard.py  public.py
backend/app/schemas/: auth.py  dashboard.py  feedback.py  question.py
backend/app/security/: dependencies.py  jwt.py  password.py
backend/app/services/: auth.py  feedback.py  question.py  user.py
backend/tests/: conftest.py
backend/tests/routers/: test_auth_extra.py  test_dashboard.py  test_public.py
backend/tests/security/: test_auth_security.py  test_primitives.py
backend/tests/services/: test_auth_service.py  test_feedback_coverage.py  test_feedback_service.py  test_question_service.py
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md  FIGMA_PROMPT.md  GDPR.md  OPERATIONS.md  PRD.md  SECURITY.md  TESTING.md
frontend/: index.html  nginx.conf  package.json  tailwind.config.ts  vercel.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: admin.ts  axios.ts  dashboard.ts  feedback.ts  survey.ts
frontend/src/auth/: ProtectedRoute.tsx  tokenStore.ts
frontend/src/components/: ErrorBoundary.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.ts  useOnlineStatus.ts  useQuestions.ts
frontend/src/i18n/: fi.json  index.ts  sv.json
frontend/src/offline/: queue.ts
nginx/: nginx.conf
(+37 files in other folders)
