[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "soite-feedback-backend"
version = "1.0.0"
description = "Soite Kotikuntoutus patient feedback system — backend"
authors = ["Ali Pourrahim <ali.pourrahim@centria.fi>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.111,<0.120"
uvicorn = { extras = ["standard"], version = ">=0.30,<0.35" }
gunicorn = ">=22,<23"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.29"
alembic = "^1.13"
pydantic = "^2.7"
pydantic-settings = "^2.3"
pyjwt = "^2.8"
passlib = { extras = ["bcrypt"], version = "^1.7" }
nh3 = "^0.2"
slowapi = "^0.1.9"
redis = { extras = ["asyncio"], version = "^5.0" }
structlog = "^24.2"
prometheus-client = "^0.20"
click = "^8.1"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
anyio = { extras = ["trio"], version = "^4.4" }
factory-boy = "^3.3"
testcontainers = { extras = ["postgres"], version = "^4.7" }
ruff = "^0.5"
mypy = "^1.10"
types-passlib = "^1.7"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "TID"]
ignore = ["S101", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "S311"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/cli.py"]
